Fix overflow styles, improve timer performance

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   color: #fff;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 div.main-container {
